Fix leader bar mobile spacing size. [ch1167]

--- a/_includes/assets/css/styles.css
+++ b/_includes/assets/css/styles.css
@@ -416,7 +416,7 @@ COMPONENTS
 
 .leader-bar {
   background-color: #ffffff;
-  padding: 1.89474rem 0rem;
+  padding: 1.89474rem 0rem 0rem;
   width: 100%; }
   @media only screen and (min-width: 768px) {
     .leader-bar {
@@ -424,7 +424,7 @@ COMPONENTS
       padding: 3.52632rem 0rem; } }
   @media only screen and (min-width: 768px) {
     .leader-bar p {
-      color: white; } }
+      color: #ffffff; } }
 
 .header-block {
   padding: 2.89474rem 0; }
