--- a/_includes/assets/sass/components/_leader-bar.scss
+++ b/_includes/assets/sass/components/_leader-bar.scss
@@ -1,7 +1,7 @@
 // Leader bar
 .leader-bar {
 	background-color: $white;
-	padding: govuk-px-to-rem(36px) govuk-px-to-rem(0px);
+	padding: govuk-px-to-rem(36px) govuk-px-to-rem(0px) govuk-px-to-rem(0px);
 	width: 100%;
 
 	@media only screen and (min-width : $tablet) {
@@ -11,7 +11,7 @@
 
 	p {
 		@media only screen and (min-width : $tablet) {
-			color: white
+			color: $white
 		}	
 	}
 }
